@@ -1,6 +1,7 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- fixed assignment of externremux.sh's default location (reported by plautze)
 - added french translations (thanks to micky979)
 - added italian translations (thanks to Diego Pierotto)
 - added gettext support (thanks to Rolf Ahrenberg)
